# rentms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/entity/: Cargo.toml
backend/entity/src/: address.rs  country.rs  mod.rs  prelude.rs  property.rs  sea_orm_active_enums.rs  token.rs  user.rs
backend/migration/src/: add_address_in_user.rs  create_address_table.rs  create_property_table.rs  lib.rs  m20241226_151835_create_user_table.rs  m20250106_211351_create_post_table.rs  m20250109_152030_post_created_at_add.rs  m20250213_205220_update_user_image_active.rs  m20250219_173314_property_add_address_category_image.rs  m20250223_111928_create_token.rs  m20250224_153031_create_country_table.rs  m20250224_153032_create_address_table.rs  m20250224_153033_add_address_in_user.rs  m20250224_153034_create_property_table.rs  m20250303_162302_update_address_foreignkey.rs  m20250308_113425_create_token_type.rs  m20250308_134626_update_token_type_enum.rs
backend/src/: main.rs
backend/src/error/: app_error.rs
backend/src/models/: address_model.rs  country_model.rs  mod.rs  property_model.rs  token_model.rs
backend/src/routes/: address_routes.rs  auth_routes.rs  country_routes.rs  home_routes.rs  mod.rs  post_routes.rs  property_routes.rs  user_routes.rs
backend/src/routes/handlers/: address_handlers.rs  auth_handlers.rs  country_handlers.rs  mod.rs  (+4 more)
backend/src/services/: file_handler_service.rs  mod.rs  user_services.rs
backend/src/utils/: api_response.rs  constants.rs  jwt.rs
(+44 files in other folders)
