[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.4.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
 